bump maven for jdk 11